# microk-kernel

./: .gitignore  CMakeLists.txt  Makefile  README.md  cap.md  ioapic.cpp  ioapic.hpp  symbols.txt  symbolstocpp.sh
doc/kapi/: kapi.aux  kapi.tex  kapi.toc
doc/structure/: structmain.aux  structmain.tex  structmain.toc
set/: a.out  hybrid_1  hybrid_1.cpp  set_1.cpp  slab_1.cpp  slab_2.cpp
src/: +  CapabilityTree  cap.md  kernel_aarch64.ld  kernel_riscv64.ld  kernel_x86_64.ld  kernelx64.ld  modules_x86_64.ld  à
src/boot/: efistub.cpp  limine.cpp
src/generic/: bitmap.cpp  bootmem.cpp  capability.cpp  container.cpp  cpu.cpp  elf.cpp  hypercall.cpp  ipc.cpp  kinfo.cpp  limine.cpp  list.cpp  loader.cpp  main.cpp  math.cpp  memblock.cpp  memory.cpp  panic.cpp  pmm.cpp  printk.cpp  random.cpp  sched.cpp  sha256.c  slab.cpp  string.cpp  syscall.cpp  task.cpp  thread.cpp  vmm.cpp
src/include/: autoconf.h  bitmap.hpp  bootmem.hpp  capability.h  capability.hpp  cdefs.h  container.hpp  cpu.hpp  cstdint.hpp  elf.hpp  hypercall.hpp  ipc.hpp  kinfo.hpp  list.hpp  loader.hpp  main.hpp  math.hpp  memblock.hpp  memory.hpp  object.hpp  panic.hpp  pmm.hpp  printk.hpp  random.hpp  sched.hpp  sha256.hpp  slab.h  slab.hpp  string.h  string.hpp  syscall.hpp  task.hpp  thread.hpp  vmm.hpp
src/init/: fbsplash.cpp  kinfo.cpp  main.cpp  modules.cpp
src/main/: capability.c  printf.c  slab.c  string.c
src/mm/: bootmem.cpp  heap.cpp  memory.cpp  pmm.cpp  string.cpp  vmm.cpp
src/module/: buffer.cpp  message.cpp  module.cpp  modulemanager.cpp
src/proc/: process.cpp  scheduler.cpp  (+2 more)
(+312 files in other folders)
